--- a/p2bootstrap_layout/index.html
+++ b/p2bootstrap_layout/index.html
@@ -12,42 +12,47 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-success m-2">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming...</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
     <div class="container">
         <div class="row">
+            <div class="col-12">
+                <header class="bg-dark pt-3 text-white px-5"> Header
+                    <nav class="navbar navbar-light bg-success mb-2 p-1">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link disabled" href="#" tabindex="-1"
+                                        aria-disabled="true">Coming...</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </header>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-12 col-lg-8">
-                <section class="bg-secondary p-3">
+                <section class="bg-secondary p-1 mb-2">Section
                     <article>
                         <div class="card m-5">
                             <div class="card-body">
                                 <h5 class="card-title">Article 1</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed tempora
+                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed
+                                    tempora
                                     officiis culpa porro recusandae sint, sequi quidem suscipit aspernatur
                                     necessitatibus dicta eius.</p>
                                 <a href="#" class="btn btn-warning">Botón :)</a>
@@ -59,7 +64,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Article 2</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed tempora
+                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed
+                                    tempora
                                     officiis culpa porro recusandae sint, sequi quidem suscipit aspernatur
                                     necessitatibus dicta eius.</p>
                                 <a href="#" class="btn btn-warning">Botón :)</a>
@@ -71,7 +77,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Article 3</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed tempora
+                                    Perspiciatis neque corrupti cumque quae consequuntur quos quisquam sed
+                                    tempora
                                     officiis culpa porro recusandae sint, sequi quidem suscipit aspernatur
                                     necessitatibus dicta eius.</p>
                                 <a href="#" class="btn btn-warning">Botón :)</a>
@@ -80,47 +87,41 @@
                     </article>
                 </section>
             </div>
-
-            <div class="row bg-warning d-flex justify-content-center">
-                <div class="col-12 col-lg-4">
-                    <aside class="m-2 p-5">
-                        <div class="list-group list-group-flush align-self-center">
-                            <button type="button" class="list-group-item list-group-item-action bg-info">Cras justo odio
-                            </button>
-                            <button type="button" class="list-group-item list-group-item-action bg-secondary">Dapibus ac
-                                facilisis
-                                in</button>
-                            <button type="button" class="list-group-item list-group-item-action bg-info">Morbi leo
-                                risus</button>
-                            <button type="button" class="list-group-item list-group-item-action bg-secondary">Porta ac
-                                consectetur
-                                ac</button>
-                            <button type="button" class="list-group-item list-group-item-action bg-info">Vestibulum at
-                                eros</button>
-                        </div>
-                    </aside>
-                </div>
-
-                <footer class="container-fluid bg-success w-100">Footer.
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro harum beatae tempore suscipit
-                        delectus
-                        nam quos tenetur neque, quia repudiandae necessitatibus ea, expedita dicta. Aliquid qui
-                        veritatis
-                        non placeat iure.</p>
+            <div class="col-12 col-lg-4 d-flex">
+                <aside class="bg-warning p-3 align-items-stretch mb-2 ">
+                    <div class="btn-group-vertical flex-grow-1 " role="group">
+                        <button type="button" class="btn btn-info flex-grow-1 ">Botón 1</button>
+                        <button type="button" class="btn btn-secondary flex-grow-1 ">Botón 2</button>
+                        <button type="button" class="btn btn-info flex-grow-1 ">Botón 3</button>
+                        <button type="button" class="btn btn-secondary flex-grow-1 ">Botón 4</button>
+                    </div>
+                </aside>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <footer class="bg-success w-100 p-5">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Library</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        </ol>
+                    </nav>
                 </footer>
             </div>
         </div>
+    </div>
 
 
-
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
