--- a/p12_javascript_queryselector/index.html
+++ b/p12_javascript_queryselector/index.html
@@ -13,36 +13,45 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 offset-md-3">
-                <h1>Mi Form</h1>
-                <form action="" class="border border-success p-3">
+            <div class="col-12 col-md-6">
+                <form class="border border-primary p-5 mt-4">
                     <div class="form-group">
-                        <label for="">Nombre</label>
-                        <input id="user-name" type="text" class="form-control" name="user"
-                            value="Ania Manuela Cuapio Pacheco">
+                        <label for="formGroupExampleInput2">Nombre</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput2" name="user"
+                            data-points-to="name" value="Israel">
                     </div>
                     <div class="form-group">
-                        <label for="">Dirección</label>
-                        <input id="user-address" type="text" class="form-control" name="user"
-                            value="Jaime Torres Bodet 203 B-202">
+                        <label for="formGroupExampleInput2">Direccion</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput3" name="user"
+                            data-points-to="address">
                     </div>
                     <div class="form-group">
-                        <label for="">Teléfono</label>
-                        <input id="user-phone" type="text" class="form-control" name="user" value="5584531080">
+                        <label for="formGroupExampleInput2">Teléfono</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput4" name="user"
+                            data-points-to="phone">
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <button id="erase-button" type="button" class="btn btn-danger mt-3 btn-sm">Borrar
+                            último</button>
+                        <button id="submit-button" class="btn btn-primary mt-3 btn-sm">Guardar</button>
                     </div>
                 </form>
-                <div class="btn btn-primary mt-3">Guardar</div>
+            </div>
+            <div class="col-12 col-md-6">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Direccion</th>
+                            <th scope="col">Telefono</th>
+                        </tr>
+                    </thead>
+                    <tbody id="users-table"></tbody>
+                </table>
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
 
