Funciones pintar y eliminar posts lista

--- a/p13_javascript_ajax_nodos/index.html
+++ b/p13_javascript_ajax_nodos/index.html
@@ -43,25 +43,7 @@
                     </div>
                 </form>
             </div>
-            <section class="feed"></section>
-
-            <!-- <div class="col-md-6">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet consectetur </h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-                            excepturi
-                            ullam minus qui dolore, sunt voluptates beatae, voluptate ratione, minima quod? Facere
-                            reiciendis id, dolorem adipisci hic fugiat omnis eaque.</p>
-                        <p class="card-text"><small class="text-muted"> 13-12-1989</small></p>
-                        <div class="btn btn-danger btn-sm delete-btn">Eliminar post</div>
-                        <div class="btn btn-primary btn-sm delete-btn">Editar post</div>
-
-                    </div>
-                </div>
-            </div>
-    </div> -->
-
+            <section class="feed d-flex justify-content-between"></section>
 
 
             <script src="./index.js"></script>
