--- a/p14_jquery_ajax/index.html
+++ b/p14_jquery_ajax/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-4 p-5">
+            <div class="col-12 col-md-4 p-5">
                 <form>
                     <div class="row p-2">
                         <div class="col">
@@ -38,7 +38,7 @@
                 <button id="submit" type="button" class="btn btn-primary">Agregar</button>
             </div>
 
-            <div class="col-8 p-5">
+            <div class="col-12 col-md-8 p-5">
                 <table class="table">
                     <thead>
                         <tr>
@@ -69,7 +69,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="./main.js"></script>
 
 </body>
 
